--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,1 +1,23 @@
-extends: airbnb
+{
+  "extends": "airbnb",
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
+  },
+  "env": {
+    "browser": true,
+    "es6": true,
+    "jest": true,
+  },
+  "rules": {
+    "import/no-extraneous-dependencies": 0,
+    "jsx-a11y/label-has-for": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/no-array-index-key": 0,
+    "react/prop-types": [2, { "ignore": ["children"] }],
+    "react/require-default-props": 0,
+  }
+}
