--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "material-components-web": "^0.22.0",
+    "mdi-react": "^2.0.46",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
