--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -17,7 +17,7 @@
     "jsx-a11y/no-static-element-interactions": 0,
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/no-array-index-key": 0,
-    "react/prop-types": [2, { "ignore": ["children"] }],
+    "react/prop-types": [2, { "ignore": ["children","forbid"] }],
     "react/require-default-props": 0,
   }
 }
